--- a/templates/dialogue-messages.hbs
+++ b/templates/dialogue-messages.hbs
@@ -27,7 +27,7 @@
       
     {{/if}}
     <textarea rows="10" id='inputMessage' name='inputMessage' class="bibliosoph-textarea"></textarea>
-    <button type="submit" value="Submit" class="bibliosoph-send-button-normal"><i class="fas fa-circle-up"></i></button>
+    <button type="submit" value="Submit" class="bibliosoph-send-button-normal"><i class="fa-solid fa-circle-up"></i></button>
 </form>
 <div class="tooltip-container">
   <div class="tooltip-label"></div>
