Enhance injury button styling in chat-card.hbs: Update button layout to utilize full width and flexbox for improved alignment and user experience.

--- a/templates/chat-card.hbs
+++ b/templates/chat-card.hbs
@@ -115,7 +115,7 @@
     <!-- INJURY BUTTON -->
     {{#if injurybutton}}
         {{#each injurybutton}}
-            <button id="cards-button-{{this.cardStyle}}" class="category-button" style="text-align: left;" value="{{this.category}}"><i class="fa-solid {{this.buttonicon}}" id="cards-icon-{{this.cardStyle}}"></i>{{this.category}}</button>
+            <button id="cards-button-{{this.cardStyle}}" class="category-button" style="text-align: left; width: 100%; display: flex; justify-content: flex-start; align-items: center;" value="{{this.category}}"><i class="fa-solid {{this.buttonicon}}" id="cards-icon-{{this.cardStyle}}"></i>{{this.category}}</button>
         {{/each}}
     {{/if}}
     <!-- INJURY BUTTON -->
