Refactor injury button implementation in bibliosoph.js and chat-card.hbs: Update button text property for clarity, enhance debug logging for injury actions, and ensure consistent button styling in chat card template.

--- a/templates/chat-card.hbs
+++ b/templates/chat-card.hbs
@@ -121,7 +121,7 @@
     <!-- INJURY BUTTON -->
     {{#if arreffect}}
         <!-- Reply Button -->
-        <button id="cards-button-{{cardStyle}}" title="Apply this injury to the selected token..." class="coffee-pub-bibliosoph-button-injury" data-effect="{{arreffect}}"><i class="fa-solid {{iconStyle}}" id="cards-icon-{{cardStyle}}"></i>{{button}}</button>
+        <button id="cards-button-{{cardStyle}}" title="Apply this injury to the selected token..." class="coffee-pub-bibliosoph-button-injury" data-effect="{{arreffect}}" style="width: 100%;"><i class="fa-solid {{iconStyle}}" id="cards-icon-{{cardStyle}}"></i>{{buttontext}}</button>
     {{/if}}
     <!-- PRIVATE MESSAGE -->
     {{#if arrToPrivate}}
