Update dialogue-messages.hbs to enhance chat type option styling: Apply flexbox layout for improved alignment and spacing of chat type images, enhancing user interface consistency.

--- a/templates/dialogue-messages.hbs
+++ b/templates/dialogue-messages.hbs
@@ -7,7 +7,7 @@
     <input type="hidden" id="hiddenCardTypeCategory" name="hiddenCardTypeCategory" value="CARDTYPEWHISPER">
   {{/unless}} 
   {{#if isPublic}}
-    <div id ="optionChatType" class="bibliosoph-option-image-container">
+    <div id ="optionChatType" class="bibliosoph-option-image-container" style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 10px; flex-wrap: wrap;">
       <input type="hidden" id="hiddenOptionChatType" name="optionChatTypeHidden" value="">
       <img class="bibliosoph-option-image bibliosoph-option-image-selected" title="Party Message" src="icons/sundries/documents/envelope-sealed-red-tan.webp" value="messageParty">
       <img class="bibliosoph-option-image" title="Party Plan" src="icons/skills/social/diplomacy-handshake.webp" value="messageVote">
