Enhance localization in en.json with new general settings and hints, improve recipient handling in bibliosoph.js for private messaging, and update chat-card.hbs for better button styling. Adjust window.js to support compressed layout for selectable elements and ensure consistent array handling for recipients.

--- a/templates/chat-card.hbs
+++ b/templates/chat-card.hbs
@@ -126,7 +126,7 @@
     <!-- PRIVATE MESSAGE -->
     {{#if arrToPrivate}}
         <!-- Reply Button -->
-        <button id="cards-button-{{cardStyle}}" title="Reply to this message..." class="coffee-pub-bibliosoph-button-reply" data-recipient="{{strRecipients}}"><i class="fa-solid fa-circle-up" id="cards-icon-{{cardStyle}}"></i>Reply All</button>
+        <button id="cards-button-{{cardStyle}}" title="Reply to this message..." class="coffee-pub-bibliosoph-button-reply" data-recipient="{{strRecipients}}" style="width: 100%;"><i class="fa-solid fa-circle-up" id="cards-icon-{{cardStyle}}"></i>Reply All</button>
     {{/if}}
 </div>
 
