--- a/templates/dialogue-messages.hbs
+++ b/templates/dialogue-messages.hbs
@@ -21,7 +21,7 @@
         <div style='width: 100%; margin-bottom: 5px;'>
             <strong>Recipients</strong>
         </div>
-        <div style='width: 100%; margin-bottom: 10px;'>
+        <div class="bibliosoph-option-image-container" style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 10px; flex-wrap: wrap;">
             {{{optionList}}}
         </div>
       
