Fix typo in dialogue-messages.hbs: Correct 'Horisantal Rule' to 'Horizontal Rule' for improved clarity in chat formatting instructions.

--- a/templates/dialogue-messages.hbs
+++ b/templates/dialogue-messages.hbs
@@ -66,7 +66,7 @@
         <li><b>Large Title</b>: # Title Here</li>
         <li><b>Medium Title</b>: ## Title Here</li>
         <li><b>Small Title</b>: ### Title Here</li>
-        <li><b>Horisantal Rule</b>: --- &#40;3 Dashes on their own line&#41;</li>
+        <li><b>Horizontal Rule</b>: --- &#40;3 Dashes on their own line&#41;</li>
         <li><b>Bold Text</b>: **Text Here**</li>
         <li><b>Italic Text</b>: *Text Here*</li>
         <li><b>Bulleted List</b>: - List Item Here</li>
