--- a/templates/chat-card.hbs
+++ b/templates/chat-card.hbs
@@ -1,20 +1,21 @@
 <span style="visibility: hidden">coffeepub-hide-header</span>
 <div class="blacksmith-card {{theme}}" >
     <div class="card-header">
-        <i class="fa-solid {{iconStyle}}" id="cards-icon-cardsdark"></i>{{cardTitle}}
+        <i class="fa-solid {{iconStyle}}"></i>{{cardTitle}}
     </div>
-    <div class="section-content">
+
+
     <!-- SENDER -->
     {{#if userName}}
         <div class="container-user">
             <img class="token-image" src="{{userAvatar}}" alt="" />
             <div class="token-text-wrapper">
                 <span class="token-name">{{userName}}</span>
-                <br />
                 <span class="token-character">{{characterName}}</span>
             </div>
         </div>
     {{/if}}
+
     <!-- PRIVATE MESSAGE RECIPIENTS -->
     {{#if arrPrivateRecipients}}
         {{#if privateRecipientsCompressed}}
@@ -36,106 +37,118 @@
             {{/each}}
         {{/if}}
     {{/if}}
-    <!-- BANNER IMAGE -->
-    {{#if banner}}
-        <div id="cards-image-cardsdark">
+
+    <!-- MAIN CONTENT -->
+    <div class="section-content">
+
+        <!-- BANNER IMAGE -->
+        {{#if banner}}
             <img style="width: 100%;" src="{{banner}}" />
-        </div>
-    {{/if}}
-    <!-- CARD SUBTITLE -->
-    {{#if cardSubTitle}}
-        <div id="cards-title-cardsdark">
-            <i class="fa-solid {{iconSubStyle}}" id="cards-icon-cardsdark"></i>{{cardSubTitle}}
-        </div>
-    {{/if}}
-    <!-- LARGE IMAGE -->
-    {{#if image}}
-        <div id="cards-image-cardsdark">
-            <img class="token-background-{{imageBackground}}" style="width: {{imageScale}}%;" src="{{image}}" />
-        </div>
-    {{/if}}
-    <!-- CARD CONTENT -->
-    {{#if (or content descriptionReveal descriptionBefore descriptionAfter)}}
-        <div id="cards-content-light-cardsdark">
+        {{/if}}
+
+        <!-- CARD SUBTITLE -->
+        {{#if cardSubTitle}}
+            <div class="section-header">
+                <i class="fa-solid {{iconSubStyle}}"></i>{{cardSubTitle}}
+            </div>
+        {{/if}}
+
+        <!-- LARGE IMAGE -->
+        {{#if image}}
+            <img class="token-background-{{imageBackground}}" style="width: 100%;" src="{{image}}" alt="" />
+        {{/if}}
+
+        {{#if injurycategory}}
+            <div class="section-header">
+                <i class="fa-solid {{injurycategoryicon}}"></i>{{injurycategory}}
+            </div>
+        {{/if}}
+
+
+        <!-- CARD CONTENT -->
+        {{#if (or content descriptionReveal descriptionBefore descriptionAfter)}}
+
             <!-- CONTENT TITLE -->
             {{#if title}}
-                <h1>{{title}}</h1>
-                <hr />
+                <div class="section-header">
+                    <i class="fa-solid fa-dice"></i> {{title}}
+                </div>
             {{/if}}
             <!-- CONTENT - NORMAL -->
             {{#if content}}
-                {{{content}}}
+                <p>{{{content}}}</p>
             {{/if}}
             <!-- CONTENT - SEARCH -->
             {{#if descriptionBefore}}<p>{{descriptionBefore}}</p>{{/if}}
             {{#if descriptionReveal}}<p><strong>{{quantityword}} {{title}}</strong> {{descriptionReveal}}</p>{{/if}}
             {{#if descriptionAfter}}<p>{{descriptionAfter}}</p>{{/if}}
-        </div>
-    {{/if}}    
-    <!-- INJURY TREATMENT -->
-    {{#if injurycategory}}
-        <div id="cards-content-light-cardsdark">
-            <p><i class="fa-solid {{injurycategoryicon}}" id="cards-icon-cardsdark"></i><strong>{{injurycategory}}</strong></p>
-        </div>
-    {{/if}}
-    {{#if treatment}}
-        <div id="cards-content-light-cardsdark">
-            <p><i class="fa-solid fa-heart-pulse" id="cards-icon-cardsdark"></i><strong>Treatment</strong></p>
-            <p>{{treatment}}</p>
-        </div>
-    {{/if}}
-    <!-- INJURY DETAILS -->
-    {{#if duration}}
-    <div id="cards-content-light-cardsdark">
-        <p><i class="fa-solid fa-hourglass-half" id="cards-icon-cardsdark"></i><strong>{{duration}}</strong></p>
+
+        {{/if}}    
+
+
     </div>
-    <div id="cards-content-light-cardsdark">
-        <p><i class="fa-solid fa-heart-crack" id="cards-icon-cardsdark"></i><strong>{{damage}}</strong></p>
+    <div class="section-content section-dark">
+
+
+        <!-- INJURY TREATMENT -->
+        {{#if treatment}}
+            <p><i class="fa-solid fa-heart-pulse"></i><strong>Treatment</strong>: {{treatment}}</p>
+        {{/if}}
+
+        <!-- INJURY DETAILS -->
+        {{#if duration}}
+            <p><i class="fa-solid fa-hourglass-half"></i><strong>{{duration}}</strong></p>
+            <p><i class="fa-solid fa-heart-crack"></i><strong>{{damage}}</strong></p>
+            <p><i class="fa-solid fa-sparkles"></i><strong>{{statuseffect}}</strong></p>
+        {{/if}}
+
+        <!-- COMPENDIUM LINK -->
+        {{#if link}}
+            <p>{{link}} x <strong>{{quantitynum}}</strong></p>
+        {{/if}}
+
+        <!-- RARITY -->
+        {{#if (or kind rarity value details)}}
+            <div>
+                <h2>Additional Details</h2>
+                <ul>
+                    {{#if kind}}<li><strong>Type:</strong> {{kind}}</li>{{/if}}
+                    {{#if rarity}}<li><strong>Rarity:</strong> {{rarity}}</li>{{/if}}
+                    {{#if value}}<li><strong>Value:</strong> {{value}}</li>{{/if}}
+                    {{#if details}}<li><strong>Details:</strong> {{details}}</li>{{/if}}
+                </ul>
+            </div>
+        {{/if}}
+
+
     </div>
-    <div id="cards-content-light-cardsdark">
-        <p><i class="fa-solid fa-sparkles" id="cards-icon-cardsdark"></i><strong>{{statuseffect}}</strong></p>
-    </div>
-    {{/if}}
-    <!-- COMPENDIUM LINK -->
-    {{#if link}}
-    <div id="cards-content-light-cardsdark">
-        <p>{{link}} x <strong>{{quantitynum}}</strong></p>
-    </div>
-    {{/if}}
-    <!-- RARITY -->
-    {{#if (or kind rarity value details)}}
-    <div id="cards-content-light-cardsdark">
-        <h2>Additional Details</h2>
-        <ul>
-            {{#if kind}}<li><strong>Type:</strong> {{kind}}</li>{{/if}}
-            {{#if rarity}}<li><strong>Rarity:</strong> {{rarity}}</li>{{/if}}
-            {{#if value}}<li><strong>Value:</strong> {{value}}</li>{{/if}}
-            {{#if details}}<li><strong>Details:</strong> {{details}}</li>{{/if}}
-        </ul>
-    </div>
-    {{/if}}
-    <!-- ACTIONS -->
-    {{#if action}}
-        <div id="cards-content-light-cardsdark">
+    {{#if hasSectionContent}}
+    <div class="section-content">
+
+        <!-- ACTIONS -->
+        {{#if action}}
             <p>{{#if actionlabel}}{{actionlabel}} {{/if}}{{action}}</p>
-        </div>
-    {{/if}}
-    <!-- INJURY BUTTON -->
-    {{#if injurybutton}}
-        {{#each injurybutton}}
-            <button id="cards-button-cardsdark" class="category-button" style="text-align: left; width: 100%; display: flex; justify-content: flex-start; align-items: center;" value="{{this.category}}"><i class="fa-solid {{this.buttonicon}}" id="cards-icon-cardsdark"></i>{{this.category}}</button>
-        {{/each}}
-    {{/if}}
-    <!-- INJURY BUTTON -->
-    {{#if arreffect}}
-        <!-- Reply Button -->
-        <button id="cards-button-cardsdark" title="Apply this injury to the selected token..." class="coffee-pub-bibliosoph-button-injury" data-effect="{{arreffect}}" style="width: 100%;"><i class="fa-solid {{iconStyle}}" id="cards-icon-cardsdark"></i>{{buttontext}}</button>
-    {{/if}}
-    <!-- PRIVATE MESSAGE -->
-    {{#if arrPrivateRecipients}}
-        <!-- Reply Button -->
-        <button id="cards-button-cardsdark" title="Reply to this message..." class="coffee-pub-bibliosoph-button-reply" data-recipient="{{strRecipients}}" style="width: 100%;"><i class="fa-solid fa-circle-up" id="cards-icon-cardsdark"></i>Reply All</button>
-    {{/if}}
+        {{/if}}
+
+        <!-- INJURY BUTTON -->
+        {{#if injurybutton}}
+            {{#each injurybutton}}
+                <button id="cards-button-cardsdark" class="category-button" style="text-align: left; width: 100%; display: flex; justify-content: flex-start; align-items: center;" value="{{this.category}}"><i class="fa-solid {{this.buttonicon}}"></i>{{this.category}}</button>
+            {{/each}}
+        {{/if}}
+
+        <!-- INJURY BUTTON -->
+        {{#if arreffect}}
+            <!-- Reply Button -->
+            <button id="cards-button-cardsdark" title="Apply this injury to the selected token..." class="coffee-pub-bibliosoph-button-injury" data-effect="{{arreffect}}" style="width: 100%;"><i class="fa-solid {{iconStyle}}"></i>{{buttontext}}</button>
+        {{/if}}
+
+        <!-- PRIVATE MESSAGE -->
+        {{#if arrPrivateRecipients}}
+            <!-- Reply Button -->
+            <button id="cards-button-cardsdark" title="Reply to this message..." class="coffee-pub-bibliosoph-button-reply" data-recipient="{{strRecipients}}" style="width: 100%;"><i class="fa-solid fa-circle-up"></i>Reply All</button>
+        {{/if}}
     </div>
+    {{/if}}
 </div>
 
